gccida/c2/start_sequence
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/emit-rtl.c:4902:12: error: expected expression
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/emit-rtl.c:4902:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/emit-rtl.c:4902:37: error: expected expression
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/emit-rtl.c:4902:29: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v0->first = *( _OWORD *)&emit->x_first_insn; 
                            ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/emit-rtl.c:4905:12: error: expected expression
*( _OWORD *)&emit->x_first_insn = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/emit-rtl.c:4905:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&emit->x_first_insn = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/start_sequence/src/obj/emit-rtl.o] Error 1
